// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClassDetailsComponent with class info should match snapshot 1`] = `
<app-class-details-view
  _grade={[Function String]}
  _name={[Function String]}
  detailChanged={[Function EventEmitter]}
  gradesKeys={[Function Array]}
  scheduleService={[Function ScheduleService]}
  shouldShowClassInfo={[Function Boolean]}
  timeslotClicked={[Function EventEmitter]}
>
  <div
    class="main-content"
    data-test-id="class-details-page"
  >
    <div
      class="container-fluid "
    >
      <div
        class="row"
      >
        <div
          class="col-lg-12 col-md-12 col-sm-12 class-details-container"
        >
          
          <div>
            <a
              class="back"
            >
              <i
                class="material-icons"
              >
                chevron_right
              </i>
              כל הכיתות
            </a>
            <div
              class="class-details"
            >
              <div
                class="class-detail-field"
              >
                <mat-form-field>
                  <input
                    data-test-id="class-name-input"
                    matinput=""
                    placeholder="שם הכיתה"
                    required=""
                    type="text"
                  />
                  <i
                    class="material-icons"
                    matsuffix=""
                  >
                    mode_edit
                  </i>
                </mat-form-field>
              </div>
              <div
                class="class-detail-field"
              >
                <mat-form-field
                  class="class-detail-field"
                >
                  <mat-select
                    data-test-id="grade-select"
                    placeholder="שכבה"
                  >
                    
                    <mat-option
                      class="grade-select-option"
                      selected="key === grade"
                    >
                       GRADES.A 
                    </mat-option>
                    <mat-option
                      class="grade-select-option"
                      selected="key === grade"
                    >
                       GRADES.B 
                    </mat-option>
                    <mat-option
                      class="grade-select-option"
                      selected="key === grade"
                    >
                       GRADES.C 
                    </mat-option>
                    <mat-option
                      class="grade-select-option"
                      selected="key === grade"
                    >
                       GRADES.D 
                    </mat-option>
                    <mat-option
                      class="grade-select-option"
                      selected="key === grade"
                    >
                       GRADES.E 
                    </mat-option>
                    <mat-option
                      class="grade-select-option"
                      selected="key === grade"
                    >
                       GRADES.F 
                    </mat-option>
                  </mat-select>
                </mat-form-field>
              </div>
            </div>
          </div>
          <h2>
            מערכת שעות כיתת פטל
          </h2>
          <app-schedule />
        </div>
      </div>
    </div>
  </div>
</app-class-details-view>
`;

exports[`ClassDetailsComponent without class info should match snapshot 1`] = `
<app-class-details-view
  _grade={[Function String]}
  _name={[Function String]}
  detailChanged={[Function EventEmitter]}
  gradesKeys={[Function Array]}
  scheduleService={[Function ScheduleService]}
  shouldShowClassInfo="false"
  timeslotClicked={[Function EventEmitter]}
>
  <div
    class="main-content"
    data-test-id="class-details-page"
  >
    <div
      class="container-fluid "
    >
      <div
        class="row"
      >
        <div
          class="col-lg-12 col-md-12 col-sm-12 class-details-container"
        >
          
          <h2>
            מערכת שעות כיתת פטל
          </h2>
          <app-schedule />
        </div>
      </div>
    </div>
  </div>
</app-class-details-view>
`;
